--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
 Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Suresh Chaudhari</title>
+        <style>
+            div{
+                margin: auto;
+                width: 900px;
+                font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            }
+            p{
+                font-style: italic;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <h1 center>
+                Suresh Chaudhari
+            </h1>
+            <!-- <p>
+                <img src="https://scontent.fktm3-1.fna.fbcdn.net/v/t1.0-0/p370x247/83292431_2781154891943028_2426955473438638080_n.jpg?_nc_cat=106&_nc_ohc=zAUV6Idx5jsAX_AfWjF&_nc_ht=scontent.fktm3-1.fna&_nc_tp=1002&oh=2dd4004b8b0b135bffb6d02ed247f5b4&oe=5E9D9B10"/>
+            </p> -->
+            <div class=links>
+                Connect with me at
+                <p><a href='https://facebook.com/codebrust' target="_blank">facebook</a></p>
+                <p><a href='https://twitter.com/codebrust' target="_blank">twitter</a></p>
+                <p><a href='https://linkedin.com/in/dangernose' target="_blank">linkedin</a></p>
+                <p><a href='https://github.com/dangernose' target="_blank">github</a></p>
+                <p><a href='https://stackoverflow.com/cv/codebrust' target="_blank">cv</a></p>
+                <p><a href='https://stackoverflow.com/story/codebrust' target="_blank">Story</a></p>
+            </div>
+        </div>
+    </body>
+</html>
+<meta charset="UTF-8">
